--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "react": "^17.0.1",
     "react-bootstrap-icons": "^1.2.3",
     "react-dom": "^17.0.1",
+    "react-multi-carousel": "^2.6.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-slick": "^0.28.0",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
